@@ -1,5 +1,6 @@
 FOF 3.6.0
 ================================================================================
++ Automatic template suffixes based on Joomla! version _and_ renderer used
 - Removed obsolete CLI tool
 - Removed deprecated Form package and Scaffolding feature
 - Removed the LESS package
